# cheese_course

./: .env  .gitignore  404.html  CONTRIBUTING.md  HISTORY.md  README.md  convert.py  convert_primary.sh  index.html  mkdocs.yml  publish.sh  pyproject.toml  pyrightconfig.json  repo.sh  todoc.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
101个策略/skdj/: index.html
authors/: index.html
books/: index.html
cheese_course/: __init__.py  cli.py
code/courses/primary/: chap01.ipynb  chap02.ipynb  chap03.ipynb  chap04.ipynb  chap05.ipynb  chap06.ipynb
code/primary/: chap01.ipynb
code/strategy_101/: skdj.ipynb
contributing/: index.html
courses/primary/chap01/: index.html
courses/primary/preface/: index.html
docs/: .pages  api.md  installation.md  usage.md
docs/code/primary/: chap01.ipynb
docs/code/strategy_101/: skdj.ipynb
docs/courses/primary/: chap01.md
docs/hotspot/ideas/: ray_and_chatgpt.md  学术论文开创的IT时代.md
docs/legends/: .pages  tulipmania.docx  tulipmania.md  voc.md
docs/overrides/partials/: comments.html
docs/primary/: .pages  chap01.md  preface.md
docs/python_tricks/: Zen_of_Python.md
docs/strategy_101/: skdj.md
docs/stylesheets/: extra.css
docs/电子书/: .pages  151_trading_strategies.md  index.md
docs/电子书/人物和传奇/: 说谎者的扑克.md
docs/电子书/量化类/: 151_trading_strategies.md
docs/课程/: .pages
docs/课程/primary/: .pages  _preface.md  chap01.md  chap02.md  chap03.md  chap04.md  chap05.md  chap06.md  preface.md
docs/量化金融史/: .pages  tulipmania.md
ebooks/books/: index.html
hotspot/ideas/ray_and_chatgpt/: index.html
hotspot/ideas/学术论文开创的IT时代/: index.html
legends/tulipmania/: index.html
legends/voc/: index.html
primary/chap01/: index.html
primary/preface/: index.html
python_tricks/Zen_of_Python/: index.html
search/: search_index.json
strategy_101/skdj/: index.html
stylesheets/: extra.css
tests/: __init__.py  test_app.py
电子书/151_trading_strategies/: index.html
量化金融史/tulipmania/: index.html
量化金融史/voc/: index.html
(+5 files in other folders)
