[tool]
[tool.poetry]
name = "cheese_course"
version = "0.1.0"
homepage = "https://github.com/zillionare/cheese_course"
description = "量化芝识."
authors = ["aaron yang <aaron_yang@jieyu.ai>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "cheese_course" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
fire = "0.4.0"

black  = { version = "^22.3.0"}
isort  = { version = "5.10.1"}
flake8  = { version = "4.0.1"}
flake8-docstrings = { version = "^1.6.0" }
mkdocs  = { version = "^1.2.3"}
mkdocs-include-markdown-plugin  = { version = "^3.2.3"}
mkdocs-material  = { version = "^8.1.11"}
mkdocstrings  = { version = "^0.18.0"}
mkdocs-material-extensions  = { version = "^1.0.3"}
mkdocs-autorefs = {version = "^0.3.1"}
pre-commit = {version = "^2.17.0"}
livereload = {version = "^2.6.3"}
mike = { version="^1.1.2", optional=true}
mkdocs-awesome-pages-plugin = "^2.8.0"
notedown = "^1.5.1"
ipykernel = "^6.21.2"
akshare = "^1.8.84"
yfinance = "^0.2.12"
tushare = "^1.2.89"
jqdatasdk = "^1.8.11"
baostock = "^0.8.8"
cython = "^0.29.33"
zigzag = "^0.3.2"
zillionare-omicron = {version = "^2.0.0a65", allow-prereleases = true}

[tool.poetry.scripts]
cheese_course = 'cheese_course.cli:main'

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
secondary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
